--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 /* Add CSS styling here */
+
 body {
     background-color: #000000;
     color: #FFFAF0;
-    padding: 20px;
+    padding: 5%;
 }
 
 header {
@@ -16,7 +17,33 @@ header {
     text-align: center;
     background-color: whitesmoke;
     color: hotpink;
-    padding: 20px;
+    padding: 5%;
+}
+
+.navigationitems {
+    color: hotpink;
+    text-decoration: none;
+}
+
+@media (max-width: 500px) {
+    h1 {
+        color: forestgreen;
+    }
+    .intro {
+        color: forestgreen;
+    }
+    .navigationitems {
+        color: white;
+    }    
+    figcaption {
+        color: forestgreen;
+    }
+}
+
+@media (max-width: 800px) {
+    h1 {
+        color: darkorange;
+    }
 }
 
 .gallery {
@@ -24,7 +51,6 @@ header {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    flex-grow: 3;
 }
 
 figcaption {
@@ -33,8 +59,8 @@ figcaption {
 
 .socialmedia {
     display: flex;
-    padding: 20px;
-    font-size: 40px;
+    padding: 5%;
+    font-size: 250%;
     justify-content: space-evenly;
   
 }
